Fixing google maps not showing on IE.

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -122,7 +122,7 @@ body.home {
 
   #sections {
     list-style: none;
-    li {
+    > li {
       display: none;
     }
   }
